# markdown-wasm

./: Cargo.toml  LICENSE.md  README.md  package.json
benches/: markdown.rs
benches/results/: bench.csv
benches/samples/: huge.md  large.md  medium.md  small.md
src/: html.rs  lib.rs  parser.rs
src/markdown/: heading.rs  list.rs  mod.rs
src/parser/: helpers.rs  inline.rs  mod.rs
