[package]
name = "markdown-wasm"
version = "0.1.2"
edition = "2024"
description = ""
repository = "https://github.com/calrl/markdown-wasm"
license = "MIT"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.121"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "markdown"
harness = false